--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       content="width=device-width,initial-scale=1.0,shrink-to-fit=no"
     />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>GRG Leauge</title>
   </head>
   <body>
     <noscript>
